[package]
name = "borgtui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
atty = "0.2.14"
# borgbackup = { version = "0.6.2", features = ["tokio"] }
# borgbackup = { git = "https://github.com/myOmikron/borgbackup.git", rev = "7508b51", features = ["tokio"]}
borgbackup = { git = "https://github.com/dpbriggs/borgbackup-fork.git", rev = "6b25a53", features = ["tokio"]}
chrono = "0.4.24"
clap = { version = "4.2.0", features = ["derive", "env"] }
crossterm = "0.26.1"
dirs = "5.0.0"
keyring = "2.0.1"
notify-rust = "4.8.0"
once_cell = "1.17.1"
rpassword = "7.2.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
toml = "0.7.3"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
tui = "0.19.0"
walkdir = "2.3.3"
