[package]
name = "borgtui"
version = "0.4.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-recursion = "1.0.4"
borgbackup = { version = "0.7.0", features = ["tokio"] }
# borgbackup = { git = "https://github.com/dpbriggs/borgbackup-fork.git", rev = "0722842", features = ["tokio"]}
chrono = "0.4.24"
clap = { version = "4.2.0", features = ["derive", "env"] }
clap_complete = "4.3.0"
clap_mangen = "0.2.11"
crossterm = "0.26.1"
dirs = "5.0.0"
glob = "0.3.1"
keyring = "2.0.1"
notify = { version = "5.1.0", default-features = false, features = ["macos_kqueue"] }
notify-rust = "4.8.0"
open = "5.0.0"
ratatui = "0.24.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
walkdir = "2.3.3"
